--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <ul>
     <li><a href="https://threejs.org/">ThreeJS main page</a></li>
     <li><a href="https://twitch.tv/">Twitch</a></li>
-    <li><a href="https://royalroadl.com/">Royal Road (Web Novels)</a></li>
+    <li><a href="https://crabbucket.github.io/p5AudioVisualizer/">My Hacktech 2019 project</a></li>
   </ul>
   
 
