--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
   <link href="css/style.css" rel="stylesheet">
   <h1>Thomas McSwain Personal Website</h1>
 </head>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
 <body>
+  <script src="sketch.js"></script>
   <p>Hello, my name is Thomas McSwain and this is a barebones skeleton of something my website might look like in the future or at least a format to follow later.
     Without any css it is very plain and does not look at all appealing and as such I will hopefully learn how to add some css stylings and maybe some JS beauty to this page.
     However, for now we will make do with white background with black text. For now enjoy this list of websites I enjoy:
   </p>
-  
+
   <ul>
     <li><a href="https://threejs.org/">ThreeJS main page</a></li>
     <li><a href="https://twitch.tv/">Twitch</a></li>
     <li><a href="https://crabbucket.github.io/p5AudioVisualizer/">My Hacktech 2019 project</a></li>
   </ul>
-  
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="js/script.js"></script>
